# KernelSight-AI

./: .clang-format  .editorconfig  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  api_server.py  benchmark.py  interactive_agent.py  kernelsight  monitor_agent.py  monitor_signals.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_kernelsight.py  setup.py  start_kernelsight.sh  stop_kernelsight.sh  unified_agent.py
docs/: 1HOUR_TEST_GUIDE.md  AGENT_DEMO.md  AGENT_OBSERVATIONS.md  API_DOCUMENTATION.md  CLI_REFERENCE.md  DASHBOARD.md  DEMO_RECORDING_GUIDE.md  INSPIRATION.md  INTERACTIVE_AGENT.md  PERFORMANCE.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  QUICK_START.md  README_FOR_JUDGES.md  SEMANTIC_LAYER_EXPLAINED.md  SEMANTIC_STRESS_TEST_PROCEDURE.md  TESTING.md  architecture_diagram.md  conf.py  hybrid_model.md  index.rst  installation.md  project_branding.md
docs/api/: reference.md
docs/architecture/: GEMINI3_INTEGRATION.md  overview.md
docs/architecture/adr/: 001-ebpf-for-telemetry.md  002-gemini-for-agent.md  003-sqlite-storage.md
docs/development/: building.md  setup.md  testing.md
docs/diagnostic_narratives/: README.md  cascade_failure_escalation.md  memory_leak_degradation.md  successful_recovery.md
docs/pipeline/: DATA_PIPELINE.md
docs/signals/: SCHEDULER_PATTERNS.md  SYSCALL_PATTERNS.md
docs/telemetry/: metrics-spec.md
docs/testing/: E2E_PIPELINE_TEST.md  LINUX_VM_TEST.md  QUICK_REFERENCE.md  STRESS_TEST.md  TROUBLESHOOTING.md
scripts/: README.md  action_metadata.py  analyze_semantic_signals.py  check_db.py  check_signals.py  debug_event.py  diagnose_signals.py  events.json  explore_data.py  generate_syscall_names.sh  hackathon_demo.py  run_baseline_collection.sh  run_kernelsight.sh  semantic_stress_test.sh  setup_sudo.sh  setup_wsl.sh  stress_test_full.sh  test_anomaly_detection.py  test_ingestion.py  update_baselines.py  verify_features.py  verify_network_stress.py
src/: __init__.py
src/agent/: README.md  action_schema.py  agent_tools.py  all_tools.py  autonomous_loop.py  context_builder.py  counterfactual_prompts.py  counterfactual_simulator.py  enhanced_tools.py  explanation_formatter.py  gemini_interaction_client.py  outcome_validator.py  policy_engine.py  reasoning_templates.py
src/analysis/: baseline_analyzer.py  trend_analyzer.py
src/pipeline/: CMakeLists.txt  README.md  __init__.py  db_manager.py  event_parsers.py  ingestion_daemon.py  json_reader.py  query_utils.py  schema.sql  semantic_ingestion_daemon.py  signal_db_adapter.py
src/pipeline/features/: __init__.py  exporter.py  feature_definitions.py  feature_engine.py
src/pipeline/interpreter/: __init__.py  signal_interpreter.py
src/pipeline/signals/: __init__.py  pagefault_classifier.py  scheduler_classifier.py  syscall_classifier.py  system_classifier.py
src/telemetry/: CMakeLists.txt  README.md
src/telemetry/ebpf/: BUILD.md  README.md  io_latency_tracer.bpf.c  io_latency_tracer.c  page_fault_tracer.bpf.c  page_fault_tracer.c  sched_tracer.bpf.c  sched_tracer.c  syscall_tracer.bpf.c  syscall_tracer.c
src/telemetry/sysfs/: net_stats.c  net_stats.h  proc_scraper.c  proc_scraper.h  scraper_daemon.c  sysfs_scraper.c  sysfs_scraper.h
tests/: CMakeLists.txt  generate_test_data.py  run_tests.py  test_api.py  test_chaos.py  test_features.py  test_hybrid_model.py  test_integration.py  test_interactions.py  test_pipeline.py  test_trends.py  test_unit.py  verify_database.py
